--- a/style.css
+++ b/style.css
@@ -13,24 +13,6 @@
     margin: auto;
 }
 
-#showcase {
-    position: fixed;
-    display: flex;
-    flex-direction: row;
-    box-sizing: border-box;
-    margin: 3rem;
-    justify-content: space-between; 
-    background-image: url("./img/simple-light-dodger-.jpg");
-    background-repeat: no-repeat ;
-    border-bottom: #000 1px snow;
-    background-size: cover;
-    height: 80vh;
-    border-radius: 7px;
-    width: 87%;
-    margin-top: 150px;
-    
-}
-
 /* header */
 
 header{
@@ -39,7 +21,6 @@ header{
     justify-content: space-between;
     padding: 10px 0px;
     border-bottom: white;
-    position: fixed;
     z-index: 2;
 
 }
@@ -84,18 +65,32 @@ color: #000;
     border-bottom-left-radius: 0px;
 }
 
-
+#showcase {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+    background-image: url("./img/simple-light-dodger-.jpg");
+    background-repeat: no-repeat ;
+    border-bottom: #000 1px snow;
+    background-size: cover;
+    height: 70vh;
+    border-radius: 7px;
+    margin-top: 50px;
+}
 
 
 /* left */
 
 .left{
+    margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: 50px;
     background-size: cover;
 }
 
 .left h1{
-    font-size: 3rem;
+    font-size: 3.5rem;
     color:blue;
     margin: 2rem;
 }
@@ -116,6 +111,7 @@ color: #000;
 .left .create {
     text-decoration: none;
     margin: 30px 20px;
+    font-size: 25px;
 
 }
 
@@ -133,14 +129,25 @@ color: #000;
 }
 
 .left .image img{
-    width: 150px;
+    width: 180px;
 
 }
 
 /* right */
+.right{
+    position: absolute;
+    right: 7%;
+    top: -30px;
+    width: 520px;
+    height: 620px;
+}
+
 .right img{
-    height: 90vh;
-    border-radius: 7px;  
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-bottom-right-radius: 12px; 
+
 }
 
 @media  (max-width: 768px){
